фильтрация по release_date
